--- a/app/components/route-finder/route-finder.css
+++ b/app/components/route-finder/route-finder.css
@@ -15,6 +15,11 @@
 	border-width: 1; 
 	border-style:solid;
 	border-color:  #AAA;
-    padding:0;
-    margin:15 15 0 15;
+    padding:5 5 5 10;
+    margin:10 15 0 15;
+	border-radius: 25;
+}
+
+.card-main-content {
+	padding:0 0 0 5;
 }
