--- a/app/app.css
+++ b/app/app.css
@@ -1,21 +1,16 @@
-﻿Page{
-    background-color: #FFFFFF;
-    color: black;
-    opacity: .87;
+﻿.title {
+    font-size: 30;
+    horizontal-align: center;
+    margin:20;
 }
 
-ActionBar{
-   background-color: #F44336;
-   font-size:20;
+button {
+    font-size: 42;
+    horizontal-align: center;
 }
 
-ActionItem{
-    color:#FFF;
-}
-
-.list-view-item{
-	height: 48;
-	font-size: 16;
-	padding-top: 16;
-	padding-left: 20;
+.message {
+    font-size: 20;
+    color: #284848;
+    horizontal-align: center;
 }
